--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,43 @@
 /* Arquivo responsavel pelos estilos */
+/* Aula 24/04/2023 - Estilo do Menu */
+body, ul {
+    margin: 0px;
+    padding: 0px;
+}
+#menu a {
+    color: black;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
+#menu a:hover {
+    background: rgba(0, 0, 0, 0.05);
+    font-size:  15px;
+}
+#logo img {
+    float: left;
+    height: 55px;
+    position: relative;
+    top: 10px;
+    left: 10px;
+}
+header {
+    width: 100%;
+    z-index: 90;
+    box-sizing: border-box;
+    height: 75px;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content:  space-between;
+    background: #e7e7e7;
+}
+#menu {
+    display: flex;
+    list-style: none;
+    gap: 0.5rem;
+}
+#btn-mobile {
+    display: none;
+}
