--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,89 @@ header {
 #btn-mobile {
     display: none;
 }
+
 #carouselExampleInterval {
     position: relative;
     z-index: 10;
-    padding-top: 85px;
+    padding-top: 75px;
     width: 100%;
 }
-#carouselExampleInterval img{
-    height: 200px;
+#carouselExampleInterval img {
+    height: auto;
+    width: 100%;
+}
+
+/* CSS Estilos Banner */
+.section-banner-home {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+    padding: 50px;
+    background-color: #005caa;
+}
+.section-banner-home img {
+    height: 400px;
+    width: auto; /* Verificar responsivo */
+}
+.section-banner-home .texto-banner {
+    margin-top: 30px;
+    font-size: 22px;
+}
+.section-banner-home .texto-banner h1 {
+    font-size: 30px;
+    width: 60%;
+    font-weight: 500;
+    padding-bottom: 20px;
+}
+.section-banner-home .texto-banner p {
+    font-size: 15px;
+    margin-bottom: 20px;    
+}
+.section-banner-home .texto-banner a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    background-color: #fff;
+    padding: 4px 14px;
+    font-size: 15px;
+}
+/* fim css estilos Banner */
+
+/* inicio css destaque*/
+
+.destaque h2 {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
+.destaque p {
+    width: 77%;
+    text-align: center;
+    font-size: 14px;
+    margin: 30px auto;
+}
+.destaque figcaption {
+    font-size: 13px;
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: center;
+}
+.destaque a{
+    justify-content: center;
+    display: flex;
+    text-decoration: none;
+    color: #000000;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 30px 0;
+}
+.destaque a:hover{
+    color: rgb(87, 85, 85);
+    font-size: 24px;
+    transition: 0.3s;
+    text-shadow: 4px 4px 6px #0000007a;
+}
+.destaque img {
+    height: 230px;
 }
