--- a/css/style.css
+++ b/css/style.css
@@ -144,4 +144,49 @@ body, ul {
 }
 .destaque img {
     height: 160px;
+/*  fim CSS Destaque */
+
+/* Inicio CSS Novidades */
+
+.novidades .text-body {
+    width: 80%;
+    margin: 70px auto;
+}
+
+.novidades h2 {
+    color: #000;
+}
+
+.novidades p {
+    color: rgb(0, 0, 0);
+}
+
+.novidades a {
+    color: rgb(255,255,255);
+    text-decoration: underline;
+    text-decoration-color: darkkhaki;
+    padding: 6px 12px;
+    background-color: rgb(88, 88, 88);
+    font-weight: 400;
+}
+/* fim CSS Novidades */
+/* Inicio CSS galeria */
+
+.galeria {
+    margin: 60px auto 20px;
+}
+
+.galeria h2 {
+    text-align: center;
+    font-size: 24px;
+}
+.galeria p {
+    text-align: center;
+    width: 50%;
+    margin: 14px auto 50px;
+}
+
+.galeria .gallery {
+    width: 30%;
+    margin: 14px auto 50px;
 }
