--- a/css/style.css
+++ b/css/style.css
@@ -307,3 +307,52 @@ body, ul {
     margin-top: 40px;
 }
 /* Fim CSS Footer . */
+/* Início CSS Streaming */
+
+.embed-container {
+    position: relative;
+    padding-bottom: 0;
+    height: auto;
+    max-width: 100%;
+    margin-top: 0;
+    margin-bottom: 10px;
+    padding-top: 80px;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: flex;
+}
+.embed-container p {
+    text-align: center;
+    font-size: 20px;
+}
+.embed-container h2 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
+.embed-container iframe {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 250px;
+    border-radius: 1em;
+    box-shadow: gray 0.5em 0.5em 0.3em;
+    transition: transform .3s;
+    display: flex;
+}
+.embed-container iframe:hover {
+    flex: 1;
+    z-index: 1;
+    transform: scale(1.2);
+    box-shadow: 0 0 10px rgba(0,0,0,0.446);
+}
+
+.embed-container .col-lg-4 {
+    margin-top: 20px;
+}
+.embed-container .col-lg-6 {
+    margin-top: 20px;
+}
+
+/* Fim CSS Streaming */
