--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body, ul {
     display: flex;
     align-items: center;
     justify-content:  space-between;
-    background: #e7e7e7;
+    background: #69696937;
 }
 #menu {
     display: flex;
@@ -275,6 +275,7 @@ body, ul {
 
 .rodape {
     padding: 50px 50px 0;
+    background-color: #69696937;
 }
 .rodape .container img {
     height: 50%;
@@ -356,3 +357,76 @@ body, ul {
 }
 
 /* Fim CSS Streaming */
+
+/* inicio css contato */
+
+.form_main {
+    width: 100%;
+    }
+    .form_main h4 {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 20px;
+        font-weight: 300;
+        margin-top: 20px;
+        margin-bottom: 15px;
+        text-transform: uppercase;
+    }
+    .heading {
+        border-bottom: 1px solid #fcab0e;
+        padding-bottom: 9px;
+        position: relative;
+    }
+    .heading span {
+        background: #9e6600 none repeat scroll 0 0;
+        bottom: -20px;
+        height: 3px;
+        left: 0;
+        position: absolute;
+        width: 75px;
+    }
+    .form {
+        border-radius: 7px;
+        padding: 6px;
+    }
+    .txt[type="text"] {
+        border: 1px solid #ccc;
+        margin: 10px 0;
+        padding: 10px 0 10px 5px;
+        width: 100%;
+    }
+    .txt_3[type="text"] {
+        margin: 10px 0 0;
+        padding: 10px 0 10px 5px;
+        width: 100%;
+    }
+    .formbutton [type="submit"] {
+        -moz-box-shadow: inset 0px 1px 0px 0px #87c0e6;
+        -webkit-box-shadow: inset 0px 1px 0px 0px;
+        box-shadow: inset 0px 1px 0px 0px #87c0e6;
+        background-color: #297ee6;
+        display: inline-block;
+        border: 1px solid #297ee6;
+        border-radius: 25px;
+        color: #fff;
+        font-size: 16px;
+        font-style: normal;
+        line-height: 35px;
+        margin: 10px 0px;
+        padding: 0;
+        text-transform: uppercase;
+        width: 30px;
+    }
+    .formbutton:hover {
+        background-color: #297ee6;
+    }
+    .formbutton:active {
+        position: relative;
+        top: 1px;
+    }
+    .txt2:hover {
+        background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+        color: #297ee6;
+        transition: all 0.5 ease 0s;
+    }
+/* fim css contato */
+/* inicio css mapa */
