--- a/css/style.css
+++ b/css/style.css
@@ -358,75 +358,122 @@ body, ul {
 
 /* Fim CSS Streaming */
 
-/* inicio css contato */
+/* Início CSS Contato */
 
 .form_main {
     width: 100%;
+}
+.form_main h4 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+.text-left {
+    border-bottom: 1px solid #a3aff0;
+    padding-bottom: 9px;
+    position: relative;
+}
+.text-left span {
+    background: #111e8d none repeat scroll 0 0;
+    bottom: -2px;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    width: 0px;
+}
+.form-horizontal {
+    border-radius: 107px;
+    padding: 6px;
+}
+.form-control[type="text"] {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+.form-control[type="email"] {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+
+.form-control-msg[type="text"] {
+    margin: 10px 0 0;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+}
+.formbutton[type="submit"] {
+    -moz-box-shadow: inset 0px 1px 0px 0px #87c0e6;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #87c0e6;
+    box-shadow: inset 0px 1px 0px 0px #87c0e6;
+    background-color: #297ee6;
+    display: inline-block;
+    border: 1px solid #2489d6;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 35px;
+    margin: 10px 0;
+    padding: 0;
+    text-transform: uppercase;
+    width: 30%;
+}
+.formbutton:hover {
+    background-color: #31a1de;
+}
+.formbutton:active {
+    position: relative;
+    top: 1px;
+}
+.txt2:hover {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    color: #5793ef;
+    transition: all 0.5s ease 0s;
+}
+/* Fim CSS Contato */
+/* Início CSS Mapa */
+.map{
+    width: 100%;
+    height: 300px;
+}
+.map iframe {
+    width: 100%;
+    height: 100%;
+}
+
+/* Fim CSS Mapa */
+/* inicio whatsapp */
+.whatsapp {
+    position: fixed;
+    z-index: 2;
+    top: 200px;
+    right: 20px;
+}
+.whatsapp img {
+    height: 50px;
+}
+.whatsapp .pulando {
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    animation: pulando .4s cubic-bezier(.53, -0.03, .67, 1.06);
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+@keyframes pulando {
+    0% {
+        transform: translateY(0px);
     }
-    .form_main h4 {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size: 20px;
-        font-weight: 300;
-        margin-top: 20px;
-        margin-bottom: 15px;
-        text-transform: uppercase;
+    100% {
+        transform: translateY(100%);
+        width: 70px;
+        height: 40px;
     }
-    .heading {
-        border-bottom: 1px solid #fcab0e;
-        padding-bottom: 9px;
-        position: relative;
-    }
-    .heading span {
-        background: #9e6600 none repeat scroll 0 0;
-        bottom: -20px;
-        height: 3px;
-        left: 0;
-        position: absolute;
-        width: 75px;
-    }
-    .form {
-        border-radius: 7px;
-        padding: 6px;
-    }
-    .txt[type="text"] {
-        border: 1px solid #ccc;
-        margin: 10px 0;
-        padding: 10px 0 10px 5px;
-        width: 100%;
-    }
-    .txt_3[type="text"] {
-        margin: 10px 0 0;
-        padding: 10px 0 10px 5px;
-        width: 100%;
-    }
-    .formbutton [type="submit"] {
-        -moz-box-shadow: inset 0px 1px 0px 0px #87c0e6;
-        -webkit-box-shadow: inset 0px 1px 0px 0px;
-        box-shadow: inset 0px 1px 0px 0px #87c0e6;
-        background-color: #297ee6;
-        display: inline-block;
-        border: 1px solid #297ee6;
-        border-radius: 25px;
-        color: #fff;
-        font-size: 16px;
-        font-style: normal;
-        line-height: 35px;
-        margin: 10px 0px;
-        padding: 0;
-        text-transform: uppercase;
-        width: 30px;
-    }
-    .formbutton:hover {
-        background-color: #297ee6;
-    }
-    .formbutton:active {
-        position: relative;
-        top: 1px;
-    }
-    .txt2:hover {
-        background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-        color: #297ee6;
-        transition: all 0.5 ease 0s;
-    }
-/* fim css contato */
-/* inicio css mapa */
+    
+}
+/* fim whatsapp */
