--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body, ul {
 }
 #header {
     width: 100%;
+    position: relative;
     z-index: 90;
     box-sizing: border-box;
     height: 75px;
@@ -360,6 +361,10 @@ body, ul {
 
 /* Início CSS Contato */
 
+.contato {
+    margin-top: 50px;
+}
+
 .form_main {
     width: 100%;
 }
@@ -367,13 +372,18 @@ body, ul {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
     font-weight: 300;
-    margin-top: 20px;
+    margin-top: 18px;
     margin-bottom: 15px;
     text-transform: uppercase;
 }
 .text-left {
-    border-bottom: 1px solid #a3aff0;
+    border-bottom: 1px solid #7e7e7e;
     padding-bottom: 9px;
+    position: relative;
+}
+.text-local {
+    border-bottom: 1px solid #7e7e7e;
+    margin-top: 9px;
     position: relative;
 }
 .text-left span {
