--- a/css/style.css
+++ b/css/style.css
@@ -50,17 +50,27 @@ body, ul {
 #btn-mobile {
     display: none;
 }
+
+/*
 .carousel-inner .carousel-item img {
     width: 100%;
-    margin: auto;
+    margin: 0 auto;
     max-height: 500px;
-    padding-top: 75px;
+    padding-top: 85px;
 }
+*/
 
 #carouselExampleInterval {
     position: relative;
     z-index: 10;
-    padding-top: 5px;
+    padding-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 10px;
+    box-shadow: 6px 6px 6px #0000007a;
+    transition: 0.3s;
+    width: 100%;
+    display: inline-flex;
 }
 #carouselExampleInterval img {
     max-height: 500px;
@@ -134,7 +144,7 @@ body, ul {
 .section-banner-home {
     width: 100%;
     height: 500px;
-    margin-top: 10px;
+    margin-top: 0px;
     padding: 50px;
     background-color: #000000;
 }
@@ -281,7 +291,9 @@ body, ul {
 .rodape .container #img-logo {
     height: 50%;
     width: 50%;
+    padding-left: 10px;
     transition: transform .3s;
+    display: block;
 }
 .rodape .container img:hover {
     transform: scale(1.5);
@@ -303,6 +315,15 @@ body, ul {
 .rodape .redes-sociais img {
     width: 45px;
     height: 40px;
+    padding-left: 0;
+    margin-left: 0.7rem;
+    transition: transform .3s;
+    border-radius: 25px;  /*  arredondando div do objeto redes socias*/
+}
+.rodape .redes-sociais img:hover {
+    z-index: 1;
+    transform: scale(1.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 446);
 }
 .rodape p.direitos {
     text-align: center;
