update prj placeclothes rev.21 > 14/06/2023

--- a/css/style.css
+++ b/css/style.css
@@ -489,3 +489,45 @@ body, ul {
     height: 50px;
 }
 /* fim whatsapp */
+
+/* inicio css card produtos */
+
+    .text-center .mb-5 {
+        margin-top: 20px;
+    }
+
+    .card img {
+        height: 500px;
+        width: 100%;
+    }
+    .bg-image {
+        position: relative;
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+    }
+
+    .mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        background-attachment: fixed;
+    }
+    .hover-overlay .mask {
+        opacity: 0;
+        -webkit-transition:all .3s ease-in-out ;
+        transition: all .3s ease-in-out;
+    }
+
+    .hover-overlay .mask:hover {
+        opacity: 0.5;
+    }
+
+
+/* fim css card produtos */
